[project]
name = "binfocrawler"
version = "0.1.0"
description = ""
authors = [
    {name = "Hyun Park",email = "hyunp.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "html5lib (>=1.1,<2.0)",
    "click (>=8.1.8,<9.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
